--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -1,10 +1,11 @@
+#backend-organization/deployment/docker-compose.yml
 version: '3.8'
 services:
   app:
     env_file:
-     - ../../.env 
+     - ../../.env  
     build:
-      context: .
+      context: ..
       dockerfile: deployment/Dockerfile
     ports:
       - "8000:8000"
